==> nileiori/ZWB1101B-A/code/project/src/device/drv_pin.c <==
#include "gd32f3x0_gpio.h"
#include "drv_pin.h"
#define GD32F3XX_PIN_NUMBERS 64 //[28, 32, 48, 64]
#define __GD32_PIN(index, gpio, gpio_index) { 0, RCU_##GPIO##gpio, GPIO##gpio, GPIO_PIN_##gpio_index, EXTI_SOURCE_GPIO##gpio, EXTI_SOURCE_PIN##gpio_index}
#define __GD32_PIN_DEFAULT {-1, (rcu_periph_enum)0, 0, 0, 0}

void gd32_pin_write(ug_base_t pin, ug_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == UG_NULL)
    {
        return;
    }

    if (value == PIN_LOW)
    {
        gpio_bit_reset(index->gpio, index->pin);
    }
    else
    {
        gpio_bit_set(index->gpio, index->pin);
    }
}

int gd32_pin_read(ug_base_t pin)
{
    int value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin(pin);
    if (index == UG_NULL)
    {
        return value;
    }

    if (gpio_input_bit_get(index->gpio, index->pin) == RESET)
    {
        value = PIN_LOW;
    }
    else
    {
        value = PIN_HIGH;
    }

    return value;
}

void gd32_pin_mode(ug_base_t pin, ug_base_t mode, ug_uint32_t alt_func_num)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == UG_NULL)
    {
        return;
    }

    /* GPIO Periph clock enable */
    rcu_periph_clock_enable(index->rcc);

    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        gpio_mode_set(index->gpio, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, index->pin);
        gpio_output_options_set(index->gpio, GPIO_OTYPE_PP, GPIO_OSPEED_MAX, index->pin);
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        gpio_mode_set(index->gpio, GPIO_MODE_OUTPUT, GPIO_PUPD_NONE, index->pin);
        gpio_output_options_set(index->gpio, GPIO_OTYPE_OD, GPIO_OSPEED_MAX, index->pin);
    }
    else if (mode == PIN_MODE_INPUT_ANL)
    {
        /* input setting: analog input . */
        gpio_mode_set(index->gpio, GPIO_MODE_ANALOG, GPIO_PUPD_NONE, index->pin);
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        gpio_mode_set(index->gpio, GPIO_MODE_INPUT, GPIO_PUPD_NONE, index->pin);
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        gpio_mode_set(index->gpio, GPIO_MODE_INPUT, GPIO_PUPD_PULLUP, index->pin);
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        gpio_mode_set(index->gpio, GPIO_MODE_INPUT, GPIO_PUPD_PULLDOWN, index->pin);
    }
    else
    {
        /* set GPIO alternate function. */
        gpio_mode_set(index->gpio, GPIO_MODE_AF, GPIO_PUPD_NONE, index->pin);
        gpio_output_options_set(index->gpio, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, index->pin);
        gpio_af_set(index->gpio, alt_func_num, index->pin);
    }

}

int pin_read(ug_base_t pin)
{
    return gd32_pin_read(pin);
}
